Fix safari layout bug

--- a/assets/common.css
+++ b/assets/common.css
@@ -28,8 +28,6 @@ a {
 }
 
 .header {
-  display: flex;
-  flex-direction: column;
   position: relative;
 }
 .navigation {
@@ -135,9 +133,11 @@ a {
   margin: 0 0 0 30px;
 }
 .image__background {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 850px;
-  position: absolute;
   opacity: 0.07;
   pointer-events: none;
 }
